--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,6 @@
     <color name="Green_100">#C2DECF</color>
     <color name="Blue_100">#CECFE5</color>
     <color name="Blue_500">#464AB2</color>
+    <color name="Red_500">#F91C1B</color>
 <!--    2A9D8F-->
 </resources>
