minor change(전체 코드 리팩토링 진행중)

--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -39,7 +39,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="50dp"
                 android:gravity="left|center_vertical"
-                android:text="boardType"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -72,7 +72,7 @@
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
 
-            android:text="제목"
+            android:text=""
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textStyle="bold"
             android:textSize="20sp"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="24dp"
             android:gravity="start"
-            android:text="userName"
+            android:text=""
             android:textColor="@color/Gray_700"
             android:textSize="10dp"
             app:layout_constraintTop_toTopOf="@id/timeArea"
@@ -103,7 +103,7 @@
             android:layout_marginTop="8dp"
             android:paddingEnd="24dp"
             android:gravity="end"
-            android:text="time"
+            android:text=""
             android:textColor="@color/Gray_700"
             android:textSize="10dp"
             app:layout_constraintTop_toBottomOf="@id/titleArea"
@@ -147,7 +147,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:textSize="16sp"
-            android:text="여기는 내용 영역"
+            android:text=""
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/tagSeparatorLine"
             app:layout_constraintStart_toStartOf="parent"
