--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -50,13 +50,13 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/ic_search"
-            app:layout_constraintEnd_toStartOf="@id/button2"
+            app:layout_constraintEnd_toStartOf="@id/menuBtn"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="18dp"
             android:layout_marginEnd="20dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/menuBtn"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/ic_setting"
