[Refactor] 디렉토리 정리

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -48,7 +48,7 @@
     </fragment>
     <fragment
         android:id="@+id/boardFragment"
-        android:name="com.example.pathfinder.ui.board.view.BoardFragment"
+        android:name="com.example.pathfinder.ui.board.BoardFragment"
         android:label="fragment_board"
         tools:layout="@layout/fragment_board" >
 
