--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.board.view.BoardInsideActivity"
+        tools:context=".ui.board.BoardInsideActivity"
         android:background="@color/white">
 
         <!-- Title Bar ConstraintLayout -->
