--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
         android:icon="@drawable/ic_board"
         android:title="게시판"/>
     <item
-        android:id="@+id/teamBuildingFragment"
+        android:id="@+id/projectFragment"
         android:icon="@drawable/ic_team"
         android:title="프로젝트"/>
 
